# MFFrameSource

./: .gitignore  CMakeLists.txt  README.md
cmake/: MFFrameSourceConfig.cmake.in  MFFrameSourceD3D12Config.cmake.in
docs/: CAMERA_SAMPLE_PREVIEW_RECORDING.md  IMPLEMENTATION_STATUS.md  RELEASE_NOTES_v1.1.0.md  STEREO_SYNC_SAMPLE.md
include/MFFrameSource/: MFCameraEnumerator.hpp  MFCommon.hpp  MFD3D11CameraCapture.hpp  MFD3D11CameraCaptureThread.hpp  MFD3D11CameraSyncThread.hpp  MFD3D11VideoCapture.hpp  MFD3D11VideoCaptureThread.hpp  MFD3D12CameraCapture.hpp  MFD3D12CameraCaptureThread.hpp  MFD3D12CameraSyncThread.hpp  MFD3D12VideoCapture.hpp  MFD3D12VideoCaptureThread.hpp  MFFrameSourceD3D12.hpp  MFPlatformContext.hpp
sample/: MFSamplePreviewWriter.hpp  d3d11_camera_read.cpp  d3d11_camera_thread_read.cpp  d3d11_stereo_sync.cpp  d3d11_video_read.cpp  d3d11_video_thread_read.cpp  d3d12_camera_benchmark.cpp  d3d12_camera_read.cpp  d3d12_camera_thread_read.cpp  d3d12_stereo_sync.cpp  d3d12_video_benchmark.cpp  d3d12_video_read.cpp  d3d12_video_thread_read.cpp
src/: MFCameraEnumerator.cpp  MFCommon.cpp  MFD3D11CameraCapture.cpp  MFD3D11CameraCaptureThread.cpp  MFD3D11CameraSyncThread.cpp  MFD3D11VideoCapture.cpp  MFD3D11VideoCaptureThread.cpp  MFD3D12CameraCapture.cpp  MFD3D12CameraCaptureThread.cpp  MFD3D12CameraSyncThread.cpp  MFD3D12VideoCapture.cpp  MFD3D12VideoCaptureThread.cpp  MFPlatformContext.cpp
src/internal/: MFComUtil.hpp  MFCpuSampleReader.cpp  MFCpuSampleReader.hpp  MFD3D11FrameCloner.cpp  MFD3D11FrameCloner.hpp  MFD3D11FrameLeaseControl.hpp  MFD3D11UploadFramePool.cpp  MFD3D11UploadFramePool.hpp  MFD3D12FrameCloner.cpp  MFD3D12FrameCloner.hpp  MFD3D12FrameLeaseControl.hpp  MFD3D12UploadFramePool.cpp  MFD3D12UploadFramePool.hpp  MFVideoFileSampleReader.cpp  MFVideoFileSampleReader.hpp
test/: CMakeLists.txt  TestHarness.hpp  test_capture_state.cpp  test_capture_thread_state.cpp  test_common.cpp  test_d3d11_camera_capture_smoke.cpp  test_d3d11_camera_thread_smoke.cpp  test_d3d11_capture_state.cpp  test_d3d11_capture_thread_state.cpp  test_d3d11_sync_thread_smoke.cpp  test_d3d11_sync_thread_state.cpp  test_d3d11_video_capture_smoke.cpp  test_d3d11_video_capture_state.cpp  test_d3d11_video_thread_smoke.cpp  test_d3d11_video_thread_state.cpp  test_d3d12_camera_capture_smoke.cpp  test_d3d12_camera_thread_smoke.cpp  test_d3d12_video_capture_smoke.cpp  test_d3d12_video_thread_smoke.cpp  test_platform_enumeration.cpp  test_sync_thread_state.cpp  test_video_capture_state.cpp  test_video_thread_state.cpp
